<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="#e0e2e1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        tools:ignore="UselessParent">

        <ImageView
            android:paddingTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sijny"
            android:layout_marginTop="15dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:paddingTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RtlHardcoded,UselessParent"
                android:gravity="top|center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="66dp">

                <TextView

                    android:paddingTop="55dp"
                    android:id="@+id/fajr1"
                    android:textColor="#45942d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr"
                    android:textSize="21sp"
                    android:clickable="false"
                    android:textStyle="normal|bold"
                    android:gravity="top" />

                <TextView

                    android:paddingTop="100dp"
                    android:id="@+id/sunrise"
                    android:textColor="#45942d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textSize="21sp"
                    android:clickable="false"
                    android:textStyle="normal|bold"
                    android:gravity="top" />

                <TextView
                    android:id="@+id/zuhr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="top"
                    android:paddingTop="145dp"
                    android:text="@string/zuhr"
                    android:textColor="#45942d"
                    android:textSize="21sp"
                    android:textStyle="normal|bold" />


                <TextView
                    android:text="@string/_7_00am"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fajTime"
                    android:textColor="#45942d"
                    android:textSize="21sp"
                    android:textStyle="normal|bold"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:layout_alignBaseline="@+id/fajr1"
                    android:layout_alignBottom="@+id/fajr1"
                    android:layout_toRightOf="@+id/mag1"
                    android:layout_toEndOf="@+id/mag1"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:text="@string/_2_00am"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sunTime"
                    android:textColor="#45942d"
                    android:textSize="21sp"
                    android:textStyle="normal|bold"
                    tools:ignore="RtlHardcoded"
                    android:layout_alignBaseline="@+id/sunrise"
                    android:layout_alignBottom="@+id/sunrise"
                    android:layout_alignLeft="@+id/fajTime"
                    android:layout_alignStart="@+id/fajTime" />

                <TextView
                    android:paddingTop="130dp"
                    android:id="@+id/mag1"
                    android:textColor="#45942d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maghrib"
                    android:textSize="21sp"
                    android:clickable="false"
                    android:textStyle="normal|bold"
                    android:gravity="top"
                    android:layout_alignLeft="@+id/fajr1"
                    android:layout_alignStart="@+id/fajr1"
                    android:layout_alignTop="@+id/fajTime" />

                <TextView
                    android:text="@string/_6_22pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/magTime"
                    android:textColor="#45942d"
                    android:textSize="21sp"
                    android:textStyle="normal|bold"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:paddingLeft="10dp"
                    android:layout_alignBaseline="@+id/mag1"
                    android:layout_alignBottom="@+id/mag1"
                    android:layout_alignRight="@+id/sunTime"
                    android:layout_alignEnd="@+id/sunTime" />

                <TextView
                    android:text="@string/_12_34pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/zurTime"
                    android:textColor="#45942d"
                    android:textSize="21sp"
                    android:textStyle="normal|bold"
                    tools:ignore="RtlHardcoded"
                    android:layout_alignBaseline="@+id/zuhr1"
                    android:layout_alignBottom="@+id/zuhr1"
                    android:layout_alignRight="@+id/magTime"
                    android:layout_alignEnd="@+id/magTime" />


            </RelativeLayout>

            <TextView
                android:text="@string/october_21_2016_muharram_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#45942d"
                android:paddingTop="175dp"
                android:paddingBottom="10dp"
                android:id="@+id/theT"
                android:textSize="19sp"
                android:layout_alignBaseline="@+id/relativeLayout"
                android:layout_alignBottom="@+id/relativeLayout"
                android:layout_centerHorizontal="true"
                tools:ignore="UnknownId"
                android:textStyle="normal|bold" />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
