<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginLeft="0dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/sijny"
        android:contentDescription=""
        android:layout_weight="0.35"
        android:layout_gravity="center_vertical"
        tools:ignore="ContentDescription,InefficientWeight,RtlHardcoded" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"


        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:paddingTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sijny_islamic_center"
            android:textSize="16.5sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView3"
            android:textStyle="normal|bold"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/theT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#FFFF"
            android:text="@string/time"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/hij"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/_13_ramadan_1436"
            android:layout_below="@+id/theT"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</LinearLayout>
